# Hackathon4fun

./: CMakeLists.txt  Dashboard.ui  Hackathon4Fun.pro  README.md  addmarkview.cpp  addmarkview.h  addmarkview.ui  hackathon.cpp  hackathon.h  hackathon.ui  hackathonView.cpp  hackathoncreator.cpp  hackathoncreator.ui  hackathoncreatorView.cpp  hackathoncreatorview.h  hackathondetailview.cpp  hackathondetailview.h  hackathondetailview.ui  hackathonview.h  home.ui  login.cpp  login.h  login.ui  loginview.cpp  loginview.h  main.cpp  step.cpp  step.h  step.ui  stepcreator.cpp  stepcreator.ui  stepcreatorview.cpp  stepcreatorview.h  stepview.cpp  stepview.h  team.cpp  team.h  team.ui  teamcreator.cpp  teamcreator.h  (+12 more)
manager/: BaseManager.cpp  BaseManager.h  HackathonManager.cpp  HackathonManager.h  MarkManager.cpp  MarkManager.h  StepManager.cpp  StepManager.h  TeamManager.cpp  TeamManager.h  UserManager.cpp  UserManager.h
model/: Admin.cpp  Admin.h  Hackathon.cpp  Hackathon.h  Mark.cpp  Mark.h  PersistableObject.cpp  PersistableObject.h  Step.cpp  Step.h  Team.cpp  Team.h  TeamMember.cpp  TeamMember.h  User.cpp  User.h
model/enum/: PersistenceErrorHandler.h
persistence/: BasePersistenceManager.cpp  BasePersistenceManager.h  HackathonPersistenceManager.cpp  HackathonPersistenceManager.h
utils/: DirectoryHelper.cpp  DirectoryHelper.h
